version 0.3.1 (2010-07-21):
	General:
	* Fixed bug in localization of empty strings.
	* Handle disco#info for buddies properly.
	* Added 'Ad-Hoc Commands' node into default disco#items list.
	* Use FindPythonInterp to find Python in CMake.
	* Added [service] jid_escaping variable to disable use of JID Escaping by default 
	  for newly registered users.
	* Ping MySQL database to avoid session timeout.

	XMPP:
	* Fixed private messages in MUC.

	AIM:
	* Fixed sending apostrophes.

	spectrumctl:
	* fixed crash when updating database from old version
	* support for spaces in config-file names
	* cleaned up imports
	* drop privileges using fork()->setuid()->exec() and not with su

version 0.3 (2010-07-13):
	General:
	* Added localization support.
	* Added support for XEP-0106: JID Escaping. JID Escaping is used only for newly 
	  added buddies. Old buddies don't use this XEP.
	* Added option to disable new registrations.
	* Added option to change user username while registering. This allows
	  to have for example Facebook transport where users can register only their 
	  facebook name (no the whole JID).
	* Added --list-purple-settings (-s) command line option to list all settings
	  which can be passed as key in [purple] section in config file.
	* Added --check-db-version (-c) command line options to check current database
	  version.
	* New Ad-Hoc Commands for Spectrum administrators: Register new user,
	  Unregister user, Set VIP status, Send message to all online users.
	* Support for glib older than 2.14.
	* Try to reconnect to Jabber server for all stream errors.
	* Disconnect users from legacy network when Jabber server gets down.
	* Send unavailable presences from all online buddies when restarting Spectrum
	  with spectrumctl.
	* Fixed timestamps for delayed messages from legacy network.
	* Entity capabilities hash is now computed correctly.
	* Users are correctly divided into 2 groups according to "vip" column in
	  "users" database table.